       Reported names adjusted accordingly.
     * Added support for removal of default CT zone limit, e.g.
       "ovs-appctl dpctl/ct-del-limits default".
     * 'dpctl/flush-conntrack' is now capable of flushing connections based
       on mark and labels.
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
   - Python:
     * Added support for choosing the output format, e.g. 'json' or 'text'.
   - ovs-vsctl:
     * New commands 'set-zone-limit', 'del-zone-limit' and 'list-zone-limits'
       to manage the maximum number of connections in conntrack zones via
       a new 'limit' column in the 'CT_Zone' database table and
       'ct_zone_default_limit' column in the 'Datapath' table.
   - Userspace datapath:
     * Added support for Generic Segmentation Offloading for the cases where
       TSO is enabled but not supported by an egress interface (except for
       tunnel interfaces).
     * 'pmd-sleep-max' is updated to also accept pmd-thread-core:sleep-max.
       The existing behaviour is maintained and a non key:value pair value
       will be applied to all other PMD thread cores.'pmd-sleep-show' is
       updated to show the maximum sleep for each PMD thread core.
     * The userspace conntrack module no longer requires the user to specify
       connection helpers in all flow rules. Instead, the helper specified
       during connection commit will be used by default.
   - DPDK:
     * Add support for DPDK 23.11.
   - Support for multicast snooping to show the protocol responsible for
     adding/updating the entry.

Known issues:
   - DPDK: v23.11 has a change in behavior in handling i40e VF devices. This
     may block and prevent OVS from adding such devices as ports in a netdev
     datapath bridge.
     For the details, see https://bugs.dpdk.org/show_bug.cgi?id=1337 which
     describes the issue first detected in the 21.11 LTS branch.


v3.2.0 - 17 Aug 2023
--------------------
   - OVSDB: