@@ -39,6 +39,7 @@ int unixctl_client_create(const char *path, struct jsonrpc **client);
 int unixctl_client_transact(struct jsonrpc *client,
                             const char *command,
                             int argc, char *argv[],
+                            int fmt_flags,
                             char **result, char **error);
 
 /* Command registration. */
